directly toList() instead of collection.toList()